--- a/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
+++ b/AIML_Module_3_Lab_1_Understanding_Distance_metrics_and_Introduction_to_KNN.ipynb
@@ -1498,17 +1498,17 @@
         "\n",
         "### 1. How are similarity and distance different from each other?\n",
         "\n",
-        "    Ans. Although similarities and distances are used to for classification of data they have different approaches towards it. <br>\n",
-        "    The similarity between two points reflects their likeliness, often quantified by metrics like cosine similarity or Jaccard similarity. High similarity means the points are close in terms of features or characteristics.<br>\n",
-        "    Whereas, Distance metrics like Euclidean Distance or Manhattan Distance, measure how far two given points are in the multidimensional space. Low distance indicates points are close, and high distance means they are far apart.<br>\n",
+        "    Ans. Although similarities and distances are used to for classification of data they have different approaches towards it.\n",
+        "    The similarity between two points reflects their likeliness, often quantified by metrics like cosine similarity or Jaccard similarity. High similarity means the points are close in terms of features or characteristics.\n",
+        "    Whereas, Distance metrics like Euclidean Distance or Manhattan Distance, measure how far two given points are in the multidimensional space. Low distance indicates points are close, and high distance means they are far apart.\n",
         "    Thus, similarity is about measuring how alike are two given points and distance metrics quantifies how far apart or close are the given data point in the multidimensional space.\n",
         "\n",
         "### 2. Are there any conditions for a particular distance to be considered a \"distance metric\"?\n",
         "    Ans. The conditions for a particular distance to be considered a \"distance metric\" are as follows:\n",
-        "        1. The distance between the given point and any other point from the data should be non-negative.<br>\n",
-        "        2. The distance between the point and itself should be zero. This property is called as identity of discernibles.<br>\n",
-        "        3. The distance from a data point 'x' to any data point 'y' should be equal to the distance from the point 'y' to the point 'x'.<br>\n",
-        "        4. The distance between two point 'x' and 'y' should be less than or equal to the sum of distance from 'x' and a third point 'z' and from 'y' to 'z'. This property is called as triangle inequality.<br>\n",
+        "        1. The distance between the given point and any other point from the data should be non-negative.\n",
+        "        2. The distance between the point and itself should be zero. This property is called as identity of discernibles.\n",
+        "        3. The distance from a data point 'x' to any data point 'y' should be equal to the distance from the point 'y' to the point 'x'.\n",
+        "        4. The distance between two point 'x' and 'y' should be less than or equal to the sum of distance from 'x' and a third point 'z' and from 'y' to 'z'. This property is called as triangle inequality.\n",
         "    The conditions ensure that the considered distance metrics is meaningfull.\n",
         "\n"
       ]
